# mr-ducky

./: .dockerignore  .gitignore  CLAUDE.md  PLAN.md  README.md  openai-support-email.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/: .env.example  Dockerfile  pyproject.toml
api/app/: deps.py  main.py  settings.py
api/app/core/: errors.py  pagination.py  routing.py  security.py
api/app/db/: models.py
api/app/db/migrations/: env.py
api/app/db/migrations/versions/: 0001_initial.py  0002_subscription_metadata.py  0003_chat_conversations.py  0004_negotiation_calls.py
api/app/routers/: actions.py  auth.py  budgets.py  categories.py  chat.py  dashboard.py  subscriptions.py  transactions.py
api/app/schemas/: _base.py  actions.py  auth.py  budget.py  category.py  chat.py  dashboard.py  subscription.py  transaction.py
api/app/services/: dashboard.py  gocardless.py  months.py  subscriptions.py
api/app/services/chat/: fake_llm.py  llm.py  openai_client.py  orchestrator.py  system_prompt.py
api/app/services/chat/knowledge/: pt_tax_2026.md
api/app/services/chat/tools/: __init__.py  budgets.py  categories.py  dashboard.py  pt_tax.py  subscriptions.py  transactions.py  writes.py
api/scripts/: seed_data.csv  seed_from_csv.py
api/tests/: conftest.py  test_auth.py  test_budgets.py  test_categories.py  test_chat_endpoint.py  test_chat_orchestrator.py  test_chat_tools.py  test_dashboard.py  test_subscriptions.py  test_transactions_filters.py
app/: .env.example  Dockerfile  package.json  proxy.ts
infra/: .env.example  README.md  cloud-init.yaml  (+1 more)
(+100 files in other folders)
